# ras_group8_motor_controller

./: CMakeLists.txt  README.md  package.xml
config/: default.yaml
include/ras_group8_motor_controller/: Characterizer.hpp  MotorController.hpp  PIDController.hpp  StaticController.hpp  motor_controller.hpp
launch/: characterizer.launch  ras_group8_motor_controller.launch
src/: MotorController.cpp  PIDController.cpp  StaticController.cpp  characterizer_node.cpp  motor_controller.cpp  motor_controller_node.cpp
test/: test_motor_controller.cpp
